I think that took entirely way too long but oh well.  exported the item selection functionality into its own class.  looking good, has some bugs.

--- a/src/app/dashboard/scheduling/schedule-planner/schedule-planner.component.css
+++ b/src/app/dashboard/scheduling/schedule-planner/schedule-planner.component.css
@@ -50,22 +50,28 @@
     border-left: 1px solid white;
     border-bottom: 1px solid white;
 }
-.time-block-container:hover{
-    cursor: pointer;
-}
-.time-block-container:hover>.time-block{
-    cursor:pointer;
-    border: 1px solid rgb(8, 76, 165);
-}
+
+
 .time-block{
     font-size:0.8em;
     border:1px solid rgb(233, 233, 233);
     border-radius: 3px;
     height:100%;
 }
-.selected-time-block{
+.highlighted-time-block{
     /* border: 1px solid rgb(189, 218, 255); */
     border:none;
     /* border-radius: 3px; */
-    background-color: rgb(230, 241, 255);
+    background-color: rgb(245, 249, 255);
+}
+
+.time-block-selection{
+    background-color: rgb(247, 250, 255);
+    border: 1px solid rgb(26, 91, 167);
+    border-radius:3px;
+    box-shadow: 0px 1px 5px rgb(216, 220, 226);
+    font-size:0.8em;
+}
+.cursor-grabbing{
+    cursor:grabbing;
 }
